HB-5098: searched and replaced more token variables

--- a/src/styles/modules/_m-accordion.sass
+++ b/src/styles/modules/_m-accordion.sass
@@ -18,8 +18,8 @@
     display: flex
     font-weight: bold
     font-size: $font-size-m
-    line-height: $line-height-h4
-    color: $color-primary-blue
+    line-height: $line-height-m
+    color: $color-primary
     margin-bottom: $space-xxs
     cursor: pointer
 
