--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -6,7 +6,7 @@
   +e(box)
     +reset
     +border(2px solid color(agray, light))
-    +rem-fallback(border-radius, $radius-s)
+    +rem-fallback(border-radius, $radius-default)
     background-color: color(awhite, base)
     display: inline-block
     flex: 0 0 auto
@@ -20,7 +20,7 @@
       width: $font-size-s
 
     +m(size-tiny)
-      +rem-fallback(border-radius, $radius-xxs)
+      +rem-fallback(border-radius, $radius-default)
       height: $font-size-xs
       width: $font-size-xs
 
