--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -44,8 +44,8 @@
               font-weight: bold
 
           .periodic-icon
-            fill: $color-primary-blue
+            fill: $color-primary
             margin-left: 1em
 
             &.active
-              color: $color-primary-blue
+              color: $color-primary
