--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -1,7 +1,7 @@
-$sizes: ( xxxs: $font-size-xxxs, xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size-m, l: $font-size-l, xl: $font-size-xl, xxl: $font-size-xxl )
+$sizes: ( xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size-m, l: $font-size-l, xl: $font-size-xl, xxl: $font-size-xxl )
 
 +b('paragraph')
-  letter-spacing: $letter-spacing-m
+  letter-spacing: $letter-spacing-default
   font-weight: normal
   margin-bottom: 40px
 
@@ -22,7 +22,7 @@ $sizes: ( xxxs: $font-size-xxxs, xxs: $font-size-xxs, xs: $font-size-xs, s: $fon
     color: color(ablue)
 
   +m('family-museo')
-    font-family: $font-museo
+    font-family: $font-special
 
   +m('weight-light')
     font-weight: 200
