--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -1,5 +1,5 @@
 +b(pet-card)
-  background: $color-white
+  background: $color-gray-lighter
   border-radius: $radius-l
   box-shadow: 0 0 4px #b3b3b3
   padding: $space-xxs
