--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -1,8 +1,8 @@
 +b(search-form)
   padding: $space-m
-  background: $color_forty_per_lighter_grey
+  background: $color-gray
   border-radius: $radius-m
-  border-top: 10px solid $color_primary_blue
+  border-top: 10px solid $color-primary
 
   h3
     margin-bottom: $space-xxxxs
@@ -17,8 +17,8 @@
       cursor: pointer
       padding: $space-xxs
       font-size: $font-size-s
-      font-family: $font-museo
-      font-weight: $weight-bold
+      font-family: $font-special
+      font-weight: $font-weight-bold
       color: #b3b3b3
 
       div.underline
@@ -28,11 +28,11 @@
         transition: width .25s
 
       &:hover
-        color: $color_primary_blue
+        color: $color-primary
 
         div.underline
           width: 100%
-          background: $color_primary_blue
+          background: $color-primary
 
       &.active
         color: #008bb8
