--- a/src/styles/modules/_m-table-of-contents.sass
+++ b/src/styles/modules/_m-table-of-contents.sass
@@ -11,12 +11,12 @@
       column-count: 3
 
     li
-      font-weight: $weight-light
+      font-weight: $font-weight-light
       padding: 15px 0
 
     .#{$prefix-component}textlink
-      color: $color-rich-black
+      color: $color-black
 
       &:hover
-        color: $color-primary-blue
+        color: $color-primary
         text-decoration: none
