--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -4,7 +4,7 @@
 .#{$prefix-component}#{$periodic-component-class} {
     margin: 0;
     padding: 0;
-    font-family: $font-helvetica;
+    font-family: $font;
     font-weight: 400;
     font-size: $base-font-size;
     color: $preset-body-color;
