--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -2,7 +2,7 @@
   font-size: $font-size-xxs
 
   +e('link-blue')
-    color: $color-primary-blue
+    color: $color-primary
     cursor: pointer
     &:hover
       text-decoration: underline
@@ -15,7 +15,7 @@
       transition: all .3s ease-in-out
       width: .6875rem
       height: .6875rem
-      fill: $color-primary-blue
+      fill: $color-primary
 
     +is('expanded')
       svg
@@ -27,7 +27,7 @@
   +e('all-offers')
     +rem-fallback(padding, $space-s)
     font-weight: 200
-    background: $color-forty-per-lighter-grey
+    background: $color-gray
 
     a
       font-weight: 400
