HB-5098: searched and replaced font values

--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -21,7 +21,7 @@ $sizes: ( xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size
   +m('color-blue')
     color: color(ablue)
 
-  +m('family-museo')
+  +m('family-special')
     font-family: $font-special
 
   +m('weight-light')
