--- a/src/styles/_font-faces.scss
+++ b/src/styles/_font-faces.scss
@@ -1,20 +1,4 @@
 @font-face {
-  font-family: "Museo";
-  font-style: normal;
-  font-weight: 300;
-  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-300.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "Museo";
-  font-style: normal;
-  font-weight: 500;
-  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-500.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "Museo";
-  font-style: normal;
-  font-weight: 700;
-  src: url("https://images-ra.adoptapet.com/fonts/museo-regular-700.woff2") format("woff2");
+  font-family: "special";
+  src: local($font-special);
 }
