--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -12,7 +12,7 @@
       +rem-fallback('font-size', $font-size-xxl)
       +rem-fallback('line-height', $line-height-xxl)
 
-    &--museo
+    &--special
       font-family: $font-special
 
     &--light
@@ -36,7 +36,7 @@
       font-size: $font-size-xl
       line-height: $line-height-xl
 
-    &--museo
+    &--special
       font-family: $font-special
 
     &--light
@@ -66,7 +66,7 @@
     &--x-compact
       +rem-fallback('line-height', $line-height-l-v2)
 
-    &--museo
+    &--special
       font-family: $font-special
 
     &--light
@@ -100,7 +100,7 @@
     &--x-x-compact
       +rem-fallback('line-height', $line-height-m)
 
-    &--museo
+    &--special
       font-family: $font-special
 
     &--light
@@ -130,7 +130,7 @@
     &--x-compact
       +rem-fallback('line-height', $line-height-s)
 
-    &--museo
+    &--special
       font-family: $font-special
 
     &--light
@@ -157,7 +157,7 @@
     &--tiny
       +font-size(12)
 
-    &--museo
+    &--special
       font-family: $font-special
 
     &--light
