--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -31,7 +31,7 @@
       display: flex
       align-items: center
       justify-content: center
-      font-family: museo
+      font-family: special
       font-weight: 700
 
       &.orange
