HB-5098: searched and replaced more font variables

--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -17,7 +17,7 @@
       cursor: pointer
       padding: $space-xxs
       font-size: $font-size-s
-      font-family: $font-special
+      font-family: $font
       font-weight: $font-weight-bold
       color: #b3b3b3
 
