--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -22,7 +22,7 @@ $sizes: ( xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size
     color: color(ablue)
 
   +m('family-special')
-    font-family: $font-special
+    font-family: $font
 
   +m('weight-light')
     font-weight: 200
