HB-5098: fixed some incorrect token values

--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -13,7 +13,7 @@
       +rem-fallback('line-height', $line-height-xxl)
 
     &--special
-      font-family: $font
+      font-family: $font-special
 
     &--light
       color: color(agray, darker)
@@ -37,7 +37,7 @@
       line-height: $line-height-xl
 
     &--special
-      font-family: $font
+      font-family: $font-special
 
     &--light
       color: color(agray, darker)
@@ -67,7 +67,7 @@
       +rem-fallback('line-height', $line-height-l-v2)
 
     &--special
-      font-family: $font
+      font-family: $font-special
 
     &--light
       color: color(agray, darker)
@@ -101,7 +101,7 @@
       +rem-fallback('line-height', $line-height-m)
 
     &--special
-      font-family: $font
+      font-family: $font-special
 
     &--light
       color: color(agray, darker)
@@ -131,7 +131,7 @@
       +rem-fallback('line-height', $line-height-s)
 
     &--special
-      font-family: $font
+      font-family: $font-special
 
     &--light
       color: color(agray, darker)
@@ -158,7 +158,7 @@
       +font-size(12)
 
     &--special
-      font-family: $font
+      font-family: $font-special
 
     &--light
       color: color(agray, darker)
