--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -2,8 +2,8 @@
 
   @include element('quick-pay') {
     display: inline-block;
-    margin: 0px 10px 30px 0px;
-    border-bottom: 1px solid;
+    @include rem-fallback('margin', 0px 10px 30px 0px);
+    @include rem-fallback('border-bottom', 1px solid);
     color: #9B9B9B;
     cursor: pointer;
 
@@ -14,10 +14,10 @@
 
     @include modifier('active') {
       display: inline-block;
+      @include rem-fallback('margin', 0px 10px 30px 0px);
       color: $color-primary-blue;
       font-weight: bold;
-      border-bottom: 2px solid;
-      margin: 0px 10px 30px 0px;
+      @include rem-fallback('border-bottom', 2px solid);
 
       &:hover {
         text-decoration: none;
@@ -27,8 +27,8 @@
 
   @include element('credit-card') {
     display: inline-block;
-    margin: 0px 10px 30px 10px;
-    border-bottom: 1px solid;
+    @include rem-fallback('margin', 0px 10px 30px 10px);
+    @include rem-fallback('border-bottom', 1px solid);
     color: #9B9B9B;
     cursor: pointer;
 
@@ -39,10 +39,10 @@
 
     @include modifier('active') {
       display: inline-block;
+      @include rem-fallback('margin', 0px 10px 30px 10px);
       color: $color-primary-blue;
       font-weight: bold;
-      border-bottom: 2px solid;
-      margin: 0px 10px 30px 10px;
+      @include rem-fallback('border-bottom', 2px solid);
       
       &:hover {
         text-decoration: none;
