HB-5098 altered some token values

--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -6,7 +6,7 @@
 
   +e(text-input) > div
     background: color(awhite)
-    border-radius: $radius-m
+    border-radius: $radius-default
 
   input[type="text"]
     cursor: default
