--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -29,7 +29,7 @@
     width: 90%
 
   +e('content')
-    @include border-radius($radius-xl)
+    @include border-radius($radius-default)
     background-clip: padding-box
     background: #fff
     border: 6px solid color(ablue)
