--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -9,7 +9,7 @@
     margin-right: 0
     right: 0
     background: color(awhite)
-    border-radius: $radius-m
+    border-radius: $radius-default
     box-shadow: $shadow-callout
     position: relative
     display: inline-block
