--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -88,7 +88,7 @@
 
   +element('label')
     +rem-fallback('font-size', $font-size-m)
-    +rem-fallback('border-radius', $radius-m)
+    +rem-fallback('border-radius', $radius-default)
     +rem-fallback('line-height', $line-height-m-v2)
     +rem-fallback('padding-left', $space-l)
     color: color(agray, darker)
