HB-5067: adds validation and formats error message

--- a/src/styles/modules/_m-npa-signup-search-filters.sass
+++ b/src/styles/modules/_m-npa-signup-search-filters.sass
@@ -18,3 +18,7 @@
     +breakpoint(tablet-plus)
       +rem-fallback('width', 367px)
       +rem-fallback('margin', 40px auto)
+
+  +e(error-message)
+    color: #ff8f43
+    padding-top: 10px
