--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -58,6 +58,10 @@
     &:hover {
       background-color: black;
     }
+
+    @include breakpoint(tablet-plus) {
+      width: 66%;
+    }
   }
 
   @include element('form-control') {
