HB-5047: adds validation for DNC list emails

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -20,6 +20,10 @@
     +breakpoint(tablet-plus)
       grid-template-columns: 1fr
 
+  +e(error-message)
+    color: #ff8f43
+    padding-top: 10px
+
   +e(skip-continue)
     align-items: center
     +rem-fallback(column-gap, $space-xxs)
