--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -64,7 +64,7 @@
     display: inline-block
 
   +e(list)
-    background-color: #fff
+    background-color: $color-white
     border-radius: 0 0 .375em .375em
     border: 1px solid #dfdfdf
     bottom: auto
