--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -12,7 +12,7 @@
     .pages
       width: 186px
       position: relative
-      font-size: 20px
+      font-size: $space-s
       font-weight: 200
       line-height: 26px
       cursor: pointer
