--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -59,8 +59,8 @@
       text-overflow: ellipsis
 
     p
-      font-weight: 300
-      line-height: 20px
+      font-weight: $font-weight-light
+      line-height: $line-height-s
       margin: 0
       white-space: nowrap
       overflow: hidden
