--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -33,8 +33,8 @@
   +e(content)
     +font-size(14)
     +rem-fallback('line-height', 22px)
-    +rem-fallback('padding', 20px)
-    font-weight: 300
+    +rem-fallback('padding', $space-s)
+    font-weight: $font-weight-light
     position: relative
 
   +e(bubble-container)
