--- a/src/styles/modules/_m-infobox.sass
+++ b/src/styles/modules/_m-infobox.sass
@@ -1,7 +1,7 @@
 +b('info-box')
   position: relative
   width: 100%
-  background-color: #ECECEC
+  background-color: $color-gray
   border-radius: $radius-default
   +rem-fallback('padding', $space-xxs $space-xs)
   +rem-fallback('margin-top', $space-s)
@@ -11,17 +11,17 @@
     position: absolute
     width: 0
     height: 0
-    +rem-fallback('margin-top', -10px)
+    +rem-fallback('margin-top', -$space-xxs)
     margin-left: 24%
     box-sizing: border-box
-    +border(8px solid color(ablack))
-    border-color: transparent transparent #ECECEC #ECECEC
+    +border(8px solid $color-black)
+    border-color: transparent transparent $color-gray $color-gray
     transform-origin: 0 0
     transform: rotate(134deg)
     z-index: 1
 
   +e('heading')
     display: grid
-    grid-template-columns: 33px 100px
-    grid-column-gap: 5px
+    +rem-fallback('grid-template-columns', 33px 100px)
+    +rem-fallback('grid-column-gap', $space-xxxxs)
     align-items: center
