--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -4,7 +4,7 @@
   +breakpoint(tablet-wide)
     display: grid
     grid-template-columns: 3fr 2fr
-    column-gap: $space-m
+    +rem-fallback('column-gap', $space-m)
 
   +e(heading)
     text-align: center
@@ -15,8 +15,8 @@
 
   +e(fields)
     display: grid
-    grid-column-gap: 20px
-    grid-row-gap: 20px
+    grid-column-gap: $space-s
+    grid-row-gap: $space-s
     +breakpoint(tablet-wide)
       grid-template-columns: 1fr
 
@@ -28,7 +28,7 @@
     text-align: left
 
   +e(offers-form-desktop)
-    margin-top: 135px
+    +rem-fallback('margin-top', 135px)
 
   +e(search-params)
     display: block
@@ -47,7 +47,7 @@
 
   +e(content)
     margin: 0 auto
-    padding: 0 27px
+    +rem-fallback('padding', 0 $space-m)
 
   +e(steps)
     display: grid
@@ -56,7 +56,6 @@
 
     +breakpoint(desktop)
       +rem-fallback(column-gap, $space-xxl)
-      //grid-auto-flow: column
       grid-template-columns: 1fr 1fr
 
     li
