--- a/src/styles/modules/_m-password-forgot.sass
+++ b/src/styles/modules/_m-password-forgot.sass
@@ -11,12 +11,12 @@
       grid-template-columns: 65% 35%
 
       > div:nth-child(1)
-        padding-right: 50px
-        margin-bottom: 50px
-        border-right: 1px solid $color-gray
+        +rem-fallback('padding-right', $space-xxl)
+        +rem-fallback('margin-bottom', $space-xxl)
+        +rem-fallback('border-right', 1px solid $color-gray)
 
       > div:nth-child(2)
-        padding-left: 50px
+        +rem-fallback('padding-left', $space-xxl)
 
       h3
-        line-height: 1.875rem
+        +rem-fallback('line-height', $line-height-l-v2)
